# Distributed-Systems

./: .gitignore  README.md
01-Sockets/: README.md
01-Sockets/client/: pom.xml
01-Sockets/server/: pom.xml
01-chat/: README.md  pom.xml
01-chat/client/: Client.java
01-chat/server/: ClientThread.java  ServerTCP.java  ServerTCPHandler.java
01-chat/src/client/: Client.java  ClientShutdownHook.java  ReciveTCP.java  ReciveUDP.java  ReciveUDPMulticast.java
01-chat/src/server/: ClientInfo.java  ClientTCPThread.java  ClientUDPThread.java  Server.java  ServerShutdownHook.java  ServerTCPHandler.java  ServerUDPHandler.java  ServiceTCP.java  ServiceUDP.java
01-chatv2/: README.md
01-chatv2/client/ascii/: ascii
02-REST/: README.md  build.gradle
02-REST/Rest-application/: build.gradle
02-REST/postman-tests/: Local Host.postman_environment.json  REST - Distributed Systems Lab.postman_collection.json  reults.json
02-RestAPI/RestDIstributedSystem/: build.gradle  settings.gradle
03-Ray/src/: lab-ray.ipynb
03-akka/HDFS/: pom.xml
04-middleware-technologies/dynamic-grpc/: README.md
04-middleware-technologies/dynamic-grpc/protos/: calculator.proto
04-middleware-technologies/smart-home/client/: pom.xml
04-middleware-technologies/smart-home/protos/: smart-home.proto
04-middleware-technologies/smart-home/server/src/: CMakeLists.txt  smart_home_async_client.cc  smart_home_async_server.cc  smart_home_client.cc  smart_home_server.cc
04-middleware-technologies/smarthome/: README.md
04-middleware-technologies/smarthome/slice/: smarthome.ice
05-MOM/_05-MOM/: ReadMe.md  pom.xml
05-RabbitMQ/: ReadMe.md
06-ZooKeeper/: README.md
06-ZooKeeper/java-app/: pom.xml
06-ZooKeeper/sample-app/: SampleApp.java
(+130 files in other folders)
